# BigDiff

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
bigdiff/: cli.py  core.py  io_utils.py
src/: cli.rs  comment.rs  diff.rs  lib.rs  main.rs  scanner.rs  utils.rs
tests/: output_path_safety.rs  test_output_path_safety.py  test_parse_size.py
