[package]
name = "bigdiff"
version = "0.1.0"
edition = "2021"
authors = ["Thales Matheus Mendonça Santos"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
similar = "2.3" # Equivalente robusto ao difflib
anyhow = "1.0"
glob = "0.3"
encoding_rs = "0.8" # Para "best effort" read